update index html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Liste des prénoms des Simplonien :<br>
     <ul>
         <li>Sacha</li>
-        <li>Tintin</li>
+        <li>alex2705</li>
     </ul>
 </body>
 </html>
